2016-06-28  Ryan Haddad  <ryanhaddad@apple.com>

        Marking fast/images/composited-animated-gif-outside-viewport.html as flaky on ios-simulator
        https://bugs.webkit.org/show_bug.cgi?id=157592

        Unreviewed test gardening.

        * platform/ios-simulator/TestExpectations:

2016-06-28  Ryan Haddad  <ryanhaddad@apple.com>

        Rebaseline http/tests/media/video-auth.html for WK2
        https://bugs.webkit.org/show_bug.cgi?id=159195

        Unreviewed test gardening.

        * platform/wk2/http/tests/media/video-auth-expected.txt:

2016-06-28  Youenn Fablet  <youenn@apple.com>

        Iterable interfaces should have their related prototype @@iterator property writable
        https://bugs.webkit.org/show_bug.cgi?id=159211

        Reviewed by Chris Dumez.

        * fast/dom/nodeListIterator-expected.txt:
        * fast/dom/nodeListIterator.html: Overriding NodeList @@iterator by Array one and checking everything is fine.

2016-06-28  Jer Noble  <jer.noble@apple.com>

        Cross-domain video loads do not prompt for authorization.
        https://bugs.webkit.org/show_bug.cgi?id=159195
        <rdar://problem/26234612>

        Reviewed by Brent Fulgham.

        Add a cross-origin authorization sub-test.

        * http/tests/media/video-auth.html:
        * http/tests/media/video-auth-expected.txt:

2016-06-28  Ryan Haddad  <ryanhaddad@apple.com>

        Marking fast/multicol/fixed-stack.html as failing on ios-simulator

        Unreviewed test gardening.

        * platform/ios-simulator-wk1/TestExpectations:
        * platform/ios-simulator/TestExpectations:

2016-06-28  Frederic Wang  <fwang@igalia.com>

        Phrasing content should be accepted in <mo> elements
        https://bugs.webkit.org/show_bug.cgi?id=130245

        Reviewed by Brent Fulgham.

        * mathml/presentation/foreign-element-in-token.html: Copy test cases to
        check <mo> elements too.