@@ -1,3 +1,15 @@
+2016-06-28  Michael Saboff  <msaboff@apple.com>
+
+        REGRESSION (r200946): Improper backtracking from last alternative in sticky patterns
+        https://bugs.webkit.org/show_bug.cgi?id=159233
+
+        Reviewed by Mark Lam.
+
+        Updated tests.
+
+        * js/regexp-sticky-expected.txt:
+        * js/script-tests/regexp-sticky.js:
+
 2016-06-28  Ryan Haddad  <ryanhaddad@apple.com>
 
         Marking fast/images/composited-animated-gif-outside-viewport.html as flaky on ios-simulator
